--- a/Source/ui_ios/Info.plist.in
+++ b/Source/ui_ios/Info.plist.in
@@ -55,5 +55,11 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_altserver._tcp</string>
+	</array>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>Play! uses the local network to find and communicate with AltServer.</string>
 </dict>
 </plist>
